--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script defer src="/__/firebase/12.5.0/firebase-app-compat.js"></script>
     <script defer src="/__/firebase/12.5.0/firebase-auth-compat.js"></script>
     <script defer src="/__/firebase/12.5.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <script defer src="/__/firebase/init.js"></script>
 
     <style>
       :root {
